javax.xml.bind package, which includes DatatypeConverter, is not available in Java 11 and later versions. It was deprecated in Java 9, and removed in Java 11.